feat(api): create POST /recommendations/movies
