# api/pkg/routes/routes.go
@@ -3,6 +3,8 @@ package routes
 import (
 	"app/feats/docs"
 	"app/feats/metrics"
+	"app/feats/movies"
+	"app/feats/recommendations"
 	"app/feats/search"
 )
 
@@ -12,11 +14,19 @@ type Route interface {
 
 type Routes []Route
 
-func GetRoutes(metricRoutes metrics.MetricRoutes, docsRoutes docs.Routes, searchRoutes search.Routes) Routes {
+func GetRoutes(
+	metricRoutes metrics.MetricRoutes,
+	docsRoutes docs.Routes,
+	searchRoutes search.Routes,
+	moviesRoutes *movies.Routes,
+	recommendationsRoutes *recommendations.Routes,
+) Routes {
 	return Routes{
 		metricRoutes,
 		docsRoutes,
 		searchRoutes,
+		moviesRoutes,
+		recommendationsRoutes,
 	}
 }
 
